# datascience_lab_two_districts

./: .gitignore  pdp_distritos_alajuela_reference.ipynb  poblacion.py  pyproject.toml
data/: df_distritos.xlsx
legacy_notebooks/: pdp_distritos_cr.ipynb
legacy_notebooks/data/: Cantones.xlsx  df_distritos2.xlsx  df_distritos2_limpio.xlsx  df_distritos_codificados.xlsx  repoblacev2011-2025-03_2.xlsx
output_dir/: index.html
