[project]
name = "datascience-lab-two-districts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "shapely>=2.1.1",
]

[tool.marimo.runtime]
output_max_bytes = 10_000_000_000
